ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  labels:
    app: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-pv-claim
      containers:
        - name: ping-pong
          image: thomasdawson/ping-pong:1.11.1
          volumeMounts:
            - name: shared-volume
              mountPath: /app/data
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
